[Update 2018-06-22]
- Issue #181: [Missing Monster] - Bloody Knight (GMC) [NattWara]

[Update 2018-06-21]
- Issue #207: Improve calc functionality for baby jobs [Slap]
- Issue #206: Updated items [Slap]
- Issue #189: Removed 3% Neutral reduction from proxy skin fragment [NattWara]
- Issue #195: Removed duplicate Detale/Detardeurus Card [NattWara]
- Issue #191: [Missing Item] Cat Club [NattWara]
- Issue #196: Steel body bug. [NattWara]
- Issue #201: Sage book option, moved Eden Katar I and Eden Knuckle I to Katar and Knuckle category [NattWara]
- Issue #202: Baby leopard pet wrong bonus stat. [NattWara]
- Issue #204: [Wrong Monster Stat] Red Eruma [NattWara]
- Fixed monster EXP. [NattWara]
- Fixed Nokrah Shadow [Dragon] & Halion (Manuk Seal) to ranged mob. [NattWara]

[Update 2018-06-19]
- Issue #200: Fixed scrollbar jumping when changing items with item data shown [Slap]
- Issue #199: Removed gym pass from weight limit calculations [Slap]
- Fixed strip chance interaction with cards for rogues/stalkers in extend info [Slap]
- Fixed extended info not clearing properly after changing info displayed [Slap]

[Update 2018-06-18]
- Issue #183: Changed items set links [Kato/Slap]
	Now done through SetEquipName Function
- Issue #149: Proofreading [Slap]
	Falcon Muffler: name
	Crest of the Rider: name
	Wolfheiden: description
	Mithril Magic Manteau: description
	Angel's Reincarnation: lvl req
	High Quality Sandals: name, lvl req
	Sacrifice Ring: jobid
	Shinobi Sash: def
	Bloodied Shackle Ball: name
	Horn of the Buffalo: name

[Update 2018-06-17]
- Issue #193: Fixed Marionette Contro [Slap]
	Stat compensation should now cap based on base stat
- Issue #5: Corrected brewing formula [Slap]
	0.05% lower than iRO due to custom homunculus bonus
- Issue #113: Thanatos cards now stack [Slap]

[Update 2018-06-16]
- Issue #188: Added Dolor Hat [Slap]
- Issue #149: Proofreading [Slap]
	Carrot Whip: added description
	Western Outlaw: added description
	Jungle Carbine: added description