@@ -24,7 +24,6 @@
 </div>
 <form name="calcForm">
 	
-<div id="debugmsg" style="margin-left: 7.5"></div>
 <div class="topic-main" align="left">
 <div align="left" style="margin-left: 6.5px;margin-top: 6.5px;">
   <strong style="color:#F00">NOTE: the calculator is player-made and while quite accurate, it is not a 100% representation of TalonRO's gameplay. It is highly discouraged to base in-game purchases on results obtained through this calculator.</strong>
