@@ -533,9 +533,9 @@ JobSkillActiveOBJ = [
 [0],
 [0],
 [0],
-[  0,331,333,335,337,339,305,132,999],
-[  0,331,333,335,337,339,305,132,317,318,999],
-[  0,373,374,375,132,999],
+[  0,331,333,335,337,339,305,999],
+[  0,331,333,335,337,339,305,317,318,999],
+[  0,373,374,375,999],
 [  0,407,408,409,410,412,413,414,415,394,395,396,398,400,401,405,438,999],
 [  0,418,419,423,428,429,430,431,432,434,435,436,437,999],
 ];
